--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>wonderpepe.github.io</title>
+	<title>WondePepe.github.io</title>
 </head>
 <body>
 <h1>Hello World</h1>
