--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+
 <!DOCTYPE html>
-<html>
-<head> 
-	<title>WondePepe.github.io</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WondePepe.github.io</title>
 </head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Hello, GitHub Pages!</h1>
+    <p>This is a simple website.</p>
 </body>
 </html>
