--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WondePepe.github.io</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, GitHub Pages!</h1>
-    <p>This is a simple website.</p>
+    <div class="background-image"></div>
+    <h1>Morjesta!</h1>
+    <p>Tää on pitäiskö mennä kupittaalle perjantaina töiden jälkeen -peli</p>
+
+    <!-- Button to open the modal -->
+    <button id="openModalBtn">Koit onnees!</button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close" id="closeModalBtn">&times;</span>
+            <p>Jaaha! Taitaa käydä nyt niin, että: <span id="rollingIcon">🔄</span> <span id="randomWord"></span></p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
