--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close" id="closeModalBtn">&times;</span>
-            <p>Jaaha! Taitaa käydä nyt niin, että: <span id="rollingIcon">🔄</span> <span id="randomWord"></span></p>
+            <p>Jaaha! Taitaa käydä nyt niin, että: <span id="rollingIcon">🍺</span> <span id="randomWord"></span></p>
         </div>
     </div>
 
