--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <!-- Button to open the modal -->
     <button id="openModalBtn">Koit onnees!</button>
 
+    
     <!-- The Modal -->
-    <div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close" id="closeModalBtn">&times;</span>
-            <p>Jaaha! Taitaa käydä nyt niin, että: <span id="rollingIcon">🍺</span> <span id="randomWord"></span></p>
-        </div>
+	<div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close" id="closeModalBtn">&times;</span>
+        <p>Jaaha! Taitaa käydä nyt niin, että: <img id="rollingIcon" src="beer-bottle.png" alt="Beer Bottle"> <span id="randomWord"></span></p>
     </div>
+	</div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
+
