--- a/index.html
+++ b/index.html
@@ -42,9 +42,37 @@
             <button id="noBtn">Ei toimi huonostikaan</button>
         </div>
     </div>
-
-<!-- Language switch -->
+ <!--  the  languages -->
+<div class="flag-container">
     <span id="languageSwitch" class="flag" title="Switch to English">🇬🇧</span>
+    
+    <!--  the Italian hand icon -->
+    <span id="italianFlag" class="flag" title="Switch to Italian">🤌</span>
+</div>
+
+       <!-- Russian flag -->
+        <span id="russianFlag" class="flag" title="Switch to Russian">🇷🇺</span>
+    </div>
+
+    <!-- The Modal for "Slava Ukraini" -->
+    <div id="slavaUkrainiModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close" id="closeSlavaUkrainiModalBtn">&times;</span>
+            <p>Slava Ukraini!</p>
+        </div>
+    </div>
+
+
+<!-- The Modal for "No Capacity" -->
+<div id="noCapacityModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close" id="closeNoCapacityModalBtn">&times;</span>
+        <p>Non disponibile</p>
+    </div>
+</div>
+
 
     
 
