--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <!-- Button to open the modal -->
     <button id="openModalBtn" class="mainButton">Koit onnees!</button>
+	
+	<p>Olet kokeilut onneasi <span id="clickCount">0</span> kertaa</p>
+	
+	
 
     
 <!-- The Modal -->
@@ -73,6 +77,8 @@
     </div>
 </div>
 
+<!-- Add this where you want to display the visitor count -->
+<!-- <p id="visitorCount">You are visitor number: <span id="count">0</span></p> -->
 
     
 
